using URI instances instead of Strings for representing URIs